turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:4: error: illegal start of simple expression
var faire  = [0,0,0]
             ^